[gd_scene load_steps=3 format=3 uid="uid://bpodq8c4gqwej"]

[ext_resource type="Script" path="res://Scripts/MainMenuScript.gd" id="1_36wvh"]
[ext_resource type="Texture2D" uid="uid://cuqqn3ur1ewmv" path="res://Assets/Backgrounds/City.jpg" id="2_fcrk6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36wvh")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(588, 379)
scale = Vector2(0.72963, 0.72963)
texture = ExtResource("2_fcrk6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.5
offset_right = 200.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_QuitButton_pressed"]
